<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <data>

        <variable
            name="vModel"
            type="com.jthomann.cff_mvvm1.viewModel.DevAccSetupViewModel" />

        <variable
            name="activity"
            type="com.jthomann.cff_mvvm1.view.DevAccSetupActivity" />

        <variable
            name="model"
            type="com.jthomann.cff_mvvm1.model.SpinnerModel" />

        <variable
            name="userModel"
            type="com.jthomann.cff_mvvm1.model.User" />

        <import type="android.view.View" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
        android:background="@drawable/acc_setup_bg"
        tools:context="com.jthomann.cff_mvvm1.view.DevAccSetupActivity"
        tools:layout_editor_absoluteY="25dp">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/default_user_ic"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="4dp"
            android:layout_marginEnd="8dp"
            android:src="@drawable/default_user_ic"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView3" />

        <ImageView
            android:id="@+id/blue_plus_image"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="@+id/default_user_ic"
            app:layout_constraintEnd_toEndOf="@+id/default_user_ic"
            app:layout_constraintHorizontal_bias="0.846"
            app:layout_constraintStart_toStartOf="@+id/default_user_ic"
            app:srcCompat="@drawable/ic_add_circle" />

        <TextView
            android:id="@+id/username_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="70dp"
            android:layout_marginTop="16dp"
            android:fontFamily="@font/montserrat"
            android:text="@string/username"
            android:textColor="@color/colorPrimary"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/default_user_ic" />

        <TextView
            android:id="@+id/dob_textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/montserrat"
            android:text="@string/date_of_birth"
            android:textColor="@color/colorPrimary"
            app:layout_constraintStart_toStartOf="@+id/username_edit_text"
            app:layout_constraintTop_toBottomOf="@+id/username_edit_text" />

        <EditText
            android:id="@+id/username_edit_text"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="48dp"
            android:ems="10"
            android:hint="@string/username"
            android:inputType="textPersonName"
            android:textSize="18sp"
            android:text="@={userModel.username}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/small_user_image"
            app:layout_constraintTop_toBottomOf="@+id/username_tv" />

        <EditText
            android:id="@+id/date_edit_text"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/dob_hint"
            android:inputType="date"
            app:layout_constraintEnd_toEndOf="@+id/username_edit_text"
            app:layout_constraintStart_toStartOf="@+id/dob_textView"
            app:layout_constraintTop_toBottomOf="@+id/dob_textView"
            tools:ignore="TextFields" />

        <ImageView
            android:id="@+id/calendar_image"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toStartOf="@+id/date_edit_text"
            app:layout_constraintTop_toTopOf="@+id/date_edit_text"
            app:srcCompat="@drawable/ic_date_range" />

        <ImageView
            android:id="@+id/small_user_image"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toStartOf="@+id/username_tv"
            app:layout_constraintTop_toTopOf="@+id/username_edit_text"
            app:srcCompat="@drawable/perm_identity_ic" />

        <Spinner
            android:id="@+id/operating_system_spinner"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="@drawable/spinner_bg"
            android:entries="@array/operating_systems"
            android:onItemSelected="@{(parent,view,pos,id)->vModel.onSelectOsItem(parent,view,pos,id)}"
            app:layout_constraintEnd_toEndOf="@+id/date_edit_text"
            app:layout_constraintStart_toStartOf="@+id/os_textView"
            app:layout_constraintTop_toBottomOf="@+id/os_textView" />


        <ImageView
            android:id="@+id/computer_image"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toStartOf="@+id/operating_system_spinner"
            app:layout_constraintTop_toBottomOf="@+id/os_textView"
            app:srcCompat="@drawable/ic_computer" />

        <TextView
            android:id="@+id/os_textView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:fontFamily="@font/montserrat"
            android:text="@string/os_string_res"
            android:textColor="@color/colorPrimary"
            app:layout_constraintStart_toStartOf="@+id/date_edit_text"
            app:layout_constraintTop_toBottomOf="@+id/date_edit_text" />

        <TextView
            android:id="@+id/country_text_view"
            android:layout_width="0dp"
            android:layout_height="25dp"
            android:layout_marginTop="8dp"
            android:fontFamily="@font/montserrat"
            android:text="@string/country"
            android:textColor="@color/colorPrimary"
            app:layout_constraintStart_toEndOf="@+id/computer_image"
            app:layout_constraintTop_toBottomOf="@+id/operating_system_spinner" />

        <TextView
            android:id="@+id/country_text_view2"
            android:layout_width="0dp"
            android:layout_height="25dp"
            android:layout_marginTop="8dp"
            android:fontFamily="@font/montserrat"
            android:text="@string/program_lang"
            android:textColor="@color/colorPrimary"
            app:layout_constraintStart_toStartOf="@+id/country_text_view"
            app:layout_constraintTop_toBottomOf="@+id/country_spinner" />

        <ImageView
            android:id="@+id/country_image"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toStartOf="@+id/country_spinner"
            app:layout_constraintTop_toBottomOf="@+id/country_text_view"
            app:srcCompat="@drawable/ic_country_white" />

        <Button
            android:id="@+id/save_user_prof_btn"
            android:layout_width="wrap_content"
            android:layout_height="54dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp"
            android:onClick="@{() -> vModel.saveUserInformation(userModel.username)}"
            android:background="@drawable/setup_save_btn"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/lang_dialog_btn" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:fontFamily="@font/montserrat"
            android:text="@string/dev_acc_setup"
            android:textColor="@color/colorOffWhite"
            android:textSize="25sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Spinner
            android:id="@+id/country_spinner"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="@drawable/spinner_bg"
            android:entries="@{model.countries}"
            android:selectedItemPosition="@={model.countryPos}"
            android:onItemSelected="@{(parent,view,pos,id)->vModel.onSelectCountryItem(parent,view,pos,id)}"
            app:layout_constraintEnd_toEndOf="@+id/operating_system_spinner"
            app:layout_constraintStart_toEndOf="@+id/computer_image"
            app:layout_constraintTop_toBottomOf="@+id/country_text_view" />

        <Button
            android:id="@+id/lang_dialog_btn"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="@drawable/spinner_bg"
            android:text="@string/language"
            android:textAlignment="center"
            android:textSize="12sp"
            android:onClick="multiChoiceDialog"
            app:layout_constraintEnd_toEndOf="@+id/country_spinner"
            app:layout_constraintStart_toStartOf="@+id/country_text_view2"
            app:layout_constraintTop_toBottomOf="@+id/country_text_view2" />

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            app:layout_constraintEnd_toStartOf="@+id/lang_dialog_btn"
            app:layout_constraintTop_toBottomOf="@+id/country_text_view2"
            app:srcCompat="@drawable/ic_code" />

</androidx.constraintlayout.widget.ConstraintLayout>
</layout>