<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable name="vModel" type="com.jthomann.cff_mvvm1.viewModel.SignUpViewModel"/>
        <variable name="activity" type="com.jthomann.cff_mvvm1.view.SignUpActivity"/>
        <import type="android.view.View"/>
    </data>

<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/cff_bg_new"
    tools:context="com.jthomann.cff_mvvm1.view.SignUpActivity"
    tools:layout_editor_absoluteY="25dp">

    <Button
        android:id="@+id/signUpBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:background="@drawable/sign_up_btn_new"
        android:textAlignment="center"
        android:textColor="@android:color/white"
        app:layout_constraintEnd_toEndOf="@+id/signUpConfPass"
        app:layout_constraintStart_toStartOf="@+id/signUpConfPass"
        app:layout_constraintTop_toBottomOf="@+id/signUpConfPass" />

    <EditText
        android:id="@+id/signUpEmail"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="33dp"
        android:ems="10"
        android:inputType="textEmailAddress"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/tvEmail"
        app:layout_constraintTop_toBottomOf="@+id/tvEmail"
        tools:ignore="Autofill,LabelFor" />

    <TextView
        android:id="@+id/tvEmail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="44dp"
        android:layout_marginTop="16dp"
        android:background="@null"
        android:fontFamily="@font/montserrat"
        android:text="@string/email"
        android:textColor="#01BAEF"
        android:textSize="13sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/logo" />

    <TextView
        android:id="@+id/tvPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:background="@null"
        android:fontFamily="@font/montserrat"
        android:text="@string/password"
        android:textColor="#01BAEF"
        android:textSize="13sp"
        app:layout_constraintStart_toStartOf="@+id/signUpEmail"
        app:layout_constraintTop_toBottomOf="@+id/signUpEmail" />

    <TextView
        android:id="@+id/tvConfPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:background="@null"
        android:fontFamily="@font/montserrat"
        android:text="@string/confPass"
        android:textColor="#01BAEF"
        android:textSize="13sp"
        app:layout_constraintStart_toStartOf="@+id/signUpPassword"
        app:layout_constraintTop_toBottomOf="@+id/signUpPassword" />

    <TextView
        android:id="@+id/tvToSignIn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:background="@null"
        android:fontFamily="@font/montserrat"
        android:text="@string/sign_in"
        android:textColor="@color/colorOffWhite"
        android:textSize="14sp"
        android:onClick="@{() -> activity.toSignIn()}"
        app:layout_constraintEnd_toEndOf="@+id/signUpBtn"
        app:layout_constraintStart_toStartOf="@+id/signUpBtn"
        app:layout_constraintTop_toBottomOf="@+id/signUpBtn" />

    <ImageView
        android:id="@+id/logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        android:contentDescription="@null"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.503"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/cff_logo_new" />

    <EditText
        android:id="@+id/signUpPassword"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPassword"
        android:labelFor="@id/signUpPassword"
        app:layout_constraintEnd_toEndOf="@+id/signUpEmail"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/tvPassword"
        app:layout_constraintTop_toBottomOf="@+id/tvPassword"
        tools:ignore="Autofill" />

    <EditText
        android:id="@+id/signUpConfPass"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:labelFor="@id/signUpConfPass"
        android:inputType="textPassword"
        app:layout_constraintEnd_toEndOf="@+id/signUpPassword"
        app:layout_constraintStart_toStartOf="@+id/tvConfPassword"
        app:layout_constraintTop_toBottomOf="@+id/tvConfPassword"
        tools:ignore="Autofill" />

</androidx.constraintlayout.widget.ConstraintLayout>
</layout>